--- a/scss/components/_variables.scss
+++ b/scss/components/_variables.scss
@@ -11,6 +11,7 @@ $link-color-btn: #fff;
 
 // bacground colors
 $back-dark: #131313;
+$mob_back: #252525;
 
 // fonts
 $font-futura: "Futura", sans-serif;
