--- a/scss/layout/_steps-to-goal.scss
+++ b/scss/layout/_steps-to-goal.scss
@@ -3,6 +3,10 @@
   background-color: $back-dark;
   @extend %pagination-btn;
 
+  @media screen and (max-width: 1310px) {
+    display: none;
+  }
+
   .section-wrapper {
     display: flex;
     justify-content: space-between;
