--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -23,6 +23,10 @@
   display: flex;
   width: 100%;
   background-color: #131313;
+
+  @media screen and (max-width: 1170px) {
+    background: $mob_back;
+  }
 }
 
 .header__wrap {
